# Pubmote

./: .gitattributes  .gitignore  CNAME  README.md  index.html  package.json  platformio.ini  pnpm-lock.yaml  pnpm-workspace.yaml  postbuild_hook.py  prebuild_hook.py  sdkconfig.avaspark_esp32s3_touch_128  sdkconfig.leafblaster_esp32s3_touch_amoled_143_co5300  sdkconfig.leafblaster_esp32s3_touch_amoled_143_sh8601  sdkconfig.lilygo_esp32s3_twatch_ultra_201  sdkconfig.pingumote_esp32s3_touch_amoled_132  sdkconfig.waveshare_esp32s3_touch_amoled_206  sdkconfig.waveshare_esp32s3_touch_lcd_169  test.cpp
.github/workflows/: cloudflare-worker.yml  firmware-tool.yml  nightly-build.yml  pull-request-build.yml  pull-request-ci.yml  release.yml
api/: package.json  tsconfig.json  wrangler.toml
api/src/: index.ts
assets/: esp32c2-CPrCFu7Z.js  esp32c5-DNmA6eRA.js  esp32c61-ktIkGZDk.js  esp32p4-D9aWWE_i.js  index-B1LmcG97.css  index-BJQrQYh7.js  index-BbdRsVFK.js  index-Bs0R2Iy_.js  index-CO3KoIyo.js  index-C_h1F_cJ.css  index-CiBESU9U.js  index-Cq_vyNXG.css  index-DnY4j3eM.js  index-DqCZHwe7.js  index-Dw_Wd75M.js  index-J2XlP-Hc.css  index-R2hdw4_v.css  index-XZltdMtn.css  index-rLYVD4GW.js
docs/: quick-start.md
esp-stacktrace-decoder/: esp_stacktrace_decoder_rs_bg.wasm
firmware/: PubRemote.sll  PubRemote.spj  implementation_plan.md  partitions_16MB.csv  partitions_32MB.csv  project.info
firmware/assets/: Saira-SemiBold.ttf.bak  modify_font.py
firmware/components/esp_lcd_st7789/: esp_lcd_st7789.c  idf_component.yml
firmware/components/esp_lcd_touch_ft3168/: idf_component.yml
firmware/components/esp_lvgl_port/: idf_component.yml
firmware/components/slint/: CMakeLists.txt  idf_component.yml
firmware/components/slint/cmake/: FindSlint.cmake
firmware/components/slint/include/: slint-esp.h
firmware/components/slint/src/: slint-esp.cpp
firmware/lvgl_editor/: CMakeLists.txt  file_list_gen.cmake  globals.xml  project.xml  pubmote.c  pubmote.h  pubmote_gen.c  pubmote_gen.h  pubmote_ui.c  pubmote_ui.h  pubmote_ui_gen.c  pubmote_ui_gen.h
firmware/lvgl_editor/fonts/: abril_fatface_80  big_shoulders_80  geist_bold_16_data.c  geist_light_60_data.c  geist_regular_12_data.c  geist_regular_14_data.c  geist_semibold_12_data.c  geist_semibold_14_data.c  geist_semibold_20_data.c  geist_semibold_28_data.c  inter_12  inter_12_data.c  inter_14  inter_14_data.c  inter_16  inter_16_data.c  inter_24  inter_24_data.c  inter_28  inter_28_data.c  inter_42  inter_42_data.c  inter_64  inter_64_data.c  inter_72  inter_72_data.c  inter_96_data.c  inter_bold_12  inter_bold_12_data.c  inter_bold_14  inter_bold_14_data.c  inter_bold_16  inter_bold_16_data.c  inter_bold_24  inter_bold_24_data.c  inter_bold_28  inter_bold_28_data.c  inter_bold_42  inter_bold_42_data.c  inter_bold_72  (+3 more)
firmware/lvgl_editor/images/: splash_data.c
firmware/lvgl_editor/preview-bin/: .hash  lved-runtime.js
firmware/lvgl_editor/screens/: about_gen.c  about_gen.h  about_screen.xml  about_screen_gen.c  about_screen_gen.h  calibration_gen.c  calibration_gen.h  calibration_screen.xml  calibration_screen_gen.c  charge_screen.xml  charge_screen_gen.c  elements.xml  elements_gen.c  menu_gen.c  menu_gen.h  menu_screen.xml  menu_screen_gen.c  pairing_gen.c  pairing_gen.h  pairing_screen.xml  pairing_screen_gen.c  settings.xml  settings_gen.c  settings_gen.h  settings_screen.xml  settings_screen_gen.c  splash_gen.c  splash_gen.h  splash_screen.xml  splash_screen_gen.c  stats_gen.c  stats_gen.h  stats_screen.xml  stats_screen_gen.c  update_screen.xml  update_screen_gen.c
firmware/lvgl_editor/widgets/: input_preview.h  input_preview.xml  input_preview_gen.c  input_preview_gen.h  input_preview_xml_parser.c  joystick_visual.c  joystick_visual.h  joystick_visual_gen.c  joystick_visual_gen.h  joystick_visual_private_gen.h  joystick_visual_xml_parser.c
firmware/src/: CMakeLists.txt  config.h  main.c
firmware/src/charge/: charge_driver.c  charge_driver.h
firmware/src/display/: display_driver.h
firmware/src/haptic/: haptic_driver.c  haptic_driver.h
firmware/src/imu/: imu_datatypes.h  imu_driver.c  imu_driver.h
firmware/src/ota/: release_query.gql  update_client.c  update_client.h
firmware/src/remote/: adc.h  buzzer.c  buzzer.h  color_utils.cpp  color_utils.h  commands.c  commands.h  comms.c  comms.h  comms_ble.c  connection.c  connection.h  console.c  console.h  display.c  display.cpp  display.h  espnow.c  espnow.h  gpio_detection.h  haptic.c  haptic.h  i2c.c  i2c.h  imu.c  imu.h  led.c  led.h  pairing.c  pairing.cpp  pairing.h  peers.h  powermanagement.c  powermanagement.h  receiver.c  receiver.h  remoteinputs.c  remoteinputs.h  settings.c  settings.h  (+13 more)
firmware/src/screens/: about_screen.c  about_screen.cpp  about_screen.h  boards_screen.cpp  boards_screen.h  calibration_screen.c  calibration_screen.cpp  calibration_screen.h  charge_screen.c  charge_screen.cpp  charge_screen.h  imu_calibration_screen.cpp  imu_calibration_screen.h  input_calibration_screen.cpp  input_calibration_screen.h  menu_screen.c  menu_screen.cpp  menu_screen.h  pairing_screen.c  pairing_screen.cpp  pairing_screen.h  settings_screen.c  settings_screen.cpp  settings_screen.h  stats_screen.c  stats_screen.cpp  stats_screen.h  update_screen.c  update_screen.cpp  update_screen.h
firmware/src/slint/: README.md  app-window.slint
firmware/src/ui/: ui.c  ui.h  ui_AboutScreen.c  ui_AboutScreen.h  ui_CalibrationScreen.c  ui_CalibrationScreen.h  ui_ChargeScreen.c  ui_ChargeScreen.h  ui_MenuScreen.c  ui_MenuScreen.h  ui_PairingScreen.c  ui_PairingScreen.h  ui_SettingsScreen.c  ui_SettingsScreen.h  ui_SplashScreen.c  ui_SplashScreen.h  ui_StatsScreen.c  ui_StatsScreen.h  ui_UpdateScreen.c  ui_UpdateScreen.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_icon2_png.c
firmware/src/utilities/: callback_registry.h  conversion_utils.h  number_utils.h  screen_utils.c  string_utils.h  theme_utils.c  vesc_utils.c  (+1 more)
firmware_tool/: package.json
firmware_tool/public/: CNAME
firmware_tool/src/: App.tsx  index.css  types.ts
tests/: test_invariant_prebuild_hook.py
(+288 files in other folders)
